# KomplexKanban

./: README.md  gitignore.txt
src/: CMakeLists.txt  a.out  main.cpp  main_test.cpp
src/lib/: Complex.cpp  Complex.h  Complex.hpp  abs.cpp  add.cpp  arg.cpp  conj.cpp  cos.cpp  cosh.cpp  division.cpp  equality.cpp  exp.cpp  extraction.cpp  imag.cpp  insertion.cpp  log.cpp  multiply.cpp  norm.cpp  polar.cpp  real.cpp  sin.cpp  sinh.cpp  sqrt.cpp  subtract.cpp  tan.cpp  tanh.cpp
tests/: a.out
